# bluepill

./: .gitignore  .gitmodules  CMakeLists.txt  README.org  STM32F103RBTx_FLASH.ld  index.html  index.org  openocd.cfg  startup_stm32f103xb.c  startup_stm32f103xb.s  toolchain.cmake
inc/: main.h  stm32_assert.h  stm32f1xx_it.h
src/: main.c  main.c~  stm32f1xx_it.c  system_stm32f1xx.c
